finalized responsive design and added mobile navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ button {
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
+  padding: 0 3rem;
 }
 
 .white {
@@ -80,7 +81,7 @@ header {
   padding: 1.5rem 2rem;
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .logo {
@@ -88,7 +89,7 @@ header {
   font-weight: 500;
 }
 
-header ul {
+#menu-desktop ul {
   display: flex;
   border: 1px solid rgba(255, 255, 255, 0.242);
   background-color: rgba(255, 255, 255, 0.242);
@@ -108,14 +109,20 @@ header li a:hover {
   transition: 0.4s;
 }
 
-header button {
+.login {
   font-size: 1rem;
   background-color: rgb(238, 236, 231);
 }
 
-header button:hover {
+.login:hover {
   background-color: rgba(255, 255, 255, 0.619);
   transition: 0.4s;
+}
+
+#menu-btn,
+#menu-tray,
+#close-btn {
+  display: none;
 }
 
 /* hero section */
@@ -129,6 +136,7 @@ header button:hover {
   background: url(/images/hero_bg.jpg) no-repeat;
   background-size: cover;
   position: relative;
+  padding: 0 3rem;
 }
 
 #hero::after {
@@ -136,12 +144,16 @@ header button:hover {
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.4);
+  z-index: 0;
 }
 
 #hero h1 {
   font-size: 4rem;
   font-weight: 500;
   z-index: 1;
+  text-align: center;
+  line-height: 4rem;
+  margin-bottom: 1rem;
 }
 
 #hero p {
@@ -150,6 +162,7 @@ header button:hover {
   color: white;
   z-index: 1;
   margin-bottom: 1.5rem;
+  text-align: center;
 }
 
 .hero-btns-wrapper {
@@ -182,8 +195,8 @@ header button:hover {
 .subtitle {
   font-size: 2rem;
   font-weight: 500;
-  margin-bottom: 2rem;
   color: #582a14;
+  margin-bottom: 1rem;
 }
 
 h3 {
@@ -194,6 +207,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 3rem;
+  margin-bottom: 2rem;
 }
 
 .features-cards-wrapper {
@@ -242,7 +256,7 @@ h3 {
 }
 
 .category-img-container {
-  height: 500px;
+  height: 450px;
   position: relative;
 }
 
@@ -293,7 +307,7 @@ h3 {
 }
 
 .destination-img-container {
-  height: 500px;
+  height: 450px;
   position: relative;
 }
 
@@ -347,7 +361,7 @@ h3 {
 .location {
   position: absolute;
   left: 15px;
-  bottom: 70px;
+  bottom: 90px;
   color: white;
   border: 1px solid white;
   border-radius: 5rem;
@@ -370,6 +384,7 @@ h3 {
 .booking {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .package-name {
@@ -385,6 +400,7 @@ h3 {
 .booking button {
   background-color: #d9d2c3;
   color: #4e3326;
+  padding: 0.2rem 1rem;
 }
 
 .booking button:hover {
@@ -401,7 +417,7 @@ h3 {
   background: url(/images/contact_bg.png) no-repeat;
   background-size: cover;
   padding: 3rem;
-  height: 600px;
+  height: auto;
   position: relative;
 }
 
@@ -432,6 +448,7 @@ h3 {
   color: #2f2e2b;
   background-color: rgba(255, 255, 255, 0.453);
   padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
 }
 
 .contact-wrapper form {
@@ -484,6 +501,7 @@ footer h3 {
 .footer-nav {
   display: flex;
   gap: 5rem;
+  margin-bottom: 2rem;
 }
 
 .footer-nav li {
@@ -527,6 +545,7 @@ footer h3 {
 
 .copyright-wrapper p {
   color: #582a14;
+  margin-bottom: 0.5rem;
 }
 
 .social-media-icons {
@@ -538,4 +557,170 @@ footer h3 {
 
 .social-media-icons a {
   color: #582a14;
+}
+
+/* media queries */
+
+@media (max-width: 1227px) {
+  .destination-cards-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .location {
+    bottom: 60px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .features-cards-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .category-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .location {
+    bottom: 70px;
+  }
+  .contact-wrapper {
+    grid-template-columns: 1fr;
+  }
+  footer {
+    flex-direction: column;
+  }
+  .footer-nav {
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 768px) {
+  .login,
+  #menu-desktop {
+    display: none;
+  }
+  #menu-btn {
+    display: block;
+  }
+  #menu-tray.hidden {
+    display: none;
+  }
+  .no-scroll {
+    overflow: hidden;
+    height: 100vh;
+  }
+  #menu-tray p {
+    position: absolute;
+    top: 1.5rem;
+    left: 2.2rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #d9d2c3;
+  }
+  #menu-tray {
+    display: block;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(73, 42, 42, 0.892);
+    z-index: 9999;
+    overflow: hidden;
+  }
+  #menu-tray ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    gap: 2rem;
+  }
+  #menu-tray a {
+    color: #d9d2c3;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+  #menu-tray hr {
+    width: 90%;
+  }
+  .login-mobile {
+    border-radius: 0.3rem;
+    width: 90%;
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: #d9d2c3;
+    outline: 3px solid #d9d2c3;
+    background: none;
+  }
+  .login-mobile:hover {
+    color: #4e3326;
+    background-color: #d9d2c373;
+    transition: 0.4s;
+  }
+  #close-btn {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    font-size: 1.5rem;
+    color: #d9d2c3;
+    background: none;
+    display: block;
+    z-index: 9999;
+  }
+  #hero h1 {
+    font-size: 3rem;
+  }
+  #hero p {
+    font-size: 1.2rem;
+  }
+  .hero-btns-wrapper {
+    gap: 1rem;
+  }
+  .hero-btns-wrapper button {
+    font-size: 1rem;
+    padding: 0.5rem 1.5rem;
+  }
+  .split {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+  .features-cards-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .category-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .destination-cards-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .location {
+    bottom: 80px;
+  }
+  .contact-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .contact-btns-wrapper {
+    flex-direction: column;
+    gap: 0rem;
+  }
+  footer {
+    flex-direction: column;
+  }
+  .footer-nav {
+    gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .copyright-wrapper {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+@media (max-width: 349px) {
+  .location {
+    bottom: 100px;
+  }
 }
